--- a/Página-1.html
+++ b/Página-1.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Página 1">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://website6033841.nicepage.io/Página-1.html?version=6aab0482-c299-e6c0-dc2e-dd7bb505b683" data-home-page-title="Página 1" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="es"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-6054"><div class="u-section-rows">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="es"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-6054"><div class="u-section-rows">
         <div class="u-grey-70 u-section-row u-section-row-1" id="sec-46aa">
           <div class="u-clearfix u-sheet u-sheet-1">
             <nav data-position="" class="u-menu u-menu-one-level u-offcanvas u-menu-1">
