--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           height="50"
         />
       </a>
-      <div id="my-github-container">
+      <div style="float: right">
         <a href="https://github.com/Tom5521">
           <b>My Github</b>
         </a>
@@ -146,5 +146,8 @@
         </p>
       </div>
     </div>
+    <footer>
+      <b>Made by Tom5521 :D</b>
+    </footer>
   </body>
 </html>
