--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Tom's place</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link href="./css/index.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -21,7 +23,8 @@
           height="50"
         />
       </a>
-      <div style="float: right">
+      <div class="to-right">
+        <a style="margin-right:10px" href="./about-me.html"><b>About me</b></a>
         <a href="https://github.com/Tom5521">
           <b>My Github</b>
         </a>
