Add best animes and mangas :D

--- a/about-me.html
+++ b/about-me.html
@@ -59,6 +59,61 @@
           </a>
         </div>
       </div>
+
+      <div style="text-align: center">
+        <h3>
+          Here is also my top of the best anime of the history (according to me)
+        </h3>
+      </div>
+      <div class="dual-div" style="text-align: center">
+        <div class="dual-div-item" style="font-size: 160%">
+          <ol>
+            <li><b>The end of Evangelion</b></li>
+            <li><b>Neon Genesis Evangelion</b></li>
+            <li><b>Akira</b></li>
+            <li><b>Death Note</b></li>
+          </ol>
+        </div>
+        <div class="dual-div-item">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/fShlVhCfHig?si=2HJN0G1rR3QsZUq_"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <div style="text-align: center">
+        <h3>And here is my top favorite manga</h3>
+      </div>
+      <div class="dual-div" style="text-align: center">
+        <div class="dual-div-item" style="font-size: 160%">
+          <ol>
+            <li><b>Berserk</b></li>
+            <li><b>Chainsaw Man</b></li>
+            <li><b>Oyasumi Pun Pun</b></li>
+            <li><b>Akira</b></li>
+            <li><b>Vagabond</b></li>
+            <li><b>20th Century Boys</b></li>
+            <li><b>Umibe no Onanoko</b></li>
+            <li><b>Naruto</b></li>
+          </ol>
+        </div>
+        <div class="dual-div-item">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/dFlDRhvM4L0?si=bqlARu7x_5oB35Ou"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
     </div>
   </body>
 </html>
