Add About me under the index title

--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
     <div class="wrap" style="font-size: 140%">
       <img src="./images/top-bg.png" class="bg" />
       <div class="content" style="text-align: center">
-        <h1>Hi I'm Tom</h1>
+        <div style="font-size: 180%">
+          <h1>Hi I'm Tom</h1>
+        </div>
+
         <br />
         <h2>I'm a junior programmer who programs for fun and boredom.</h2>
+        <a style="font-size: 115%" href="./about-me.html">About me</a>
         <br /><br />
         <q
           >School schedules are the worst thing that could have been invented</q
         >
-        <br />
         <q
           >It's like a job but they don't even pay you and they don't even teach
           you well.</q
