--- a/about-me.html
+++ b/about-me.html
@@ -57,17 +57,7 @@
           <h4>I love you zazu!!!</h4>
           <a href="https://www.instagram.com/zazubabyman/">
             <img id="zazu-img" style="width: 80%" />
-            <script>
-              const imgs = [
-                "./images/zazu/zazu.jpg",
-                "./images/zazu/born-to-dilly-dally.jpg",
-                "./images/zazu/theres-motion.jpg",
-                "./images/zazu/zazu-in-the-war.jpg",
-                "./images/zazu/zazu-in-watermelon.jpg",
-              ];
-              const number = Math.floor(Math.random() * imgs.length);
-              document.getElementById("zazu-img").src = imgs[number];
-            </script>
+            <script src="./js/random-zazu-img.js"></script>
           </a>
         </div>
       </div>
