--- a/about-me.html
+++ b/about-me.html
@@ -12,26 +12,40 @@
     </header>
     <div style="background-color: rgba(0, 0, 0, 0.377)">
       <h1 style="text-align: center">About Me</h1>
-      <p>
-        I'm a self-taught person who enjoys learning, I'm "starting", so I've
-        been 2 years, but as this is little in this world, don't expect me to be
-        a senior programmer.
-      </p>
-      <p>
-        From time to time I collaborate in projects written in golang and/or
-        write my own, my favorite language is golang, I really like that
-        language, right now I'm learning html, css and htmx, to be able to
-        integrate them with go and make good websites.
-      </p>
-      <p>
-        And EVERYTHING is just for pure entertainment/fun for me, anyway I love
-        programming and I plan to study software engineering in the near future,
-        that is when I finish high school.
-      </p>
-      <p>
-        I am a cat lover, I also like anime and videogames, here below is a list
-        of the best videogames ever (according to me)
-      </p>
+      <div style="margin-left: 10%; margin-right: 10%">
+        <p>
+          I'm a self-taught person who enjoys learning, I'm "starting", so I've
+          been 2 years, but as this is little in this world, don't expect me to
+          be a senior programmer.
+        </p>
+        <p>
+          From time to time I collaborate in projects written in golang and/or
+          write my own, my favorite language is golang, I really like that
+          language, right now I'm learning html, css and htmx, to be able to
+          integrate them with go and make good websites.
+        </p>
+        <p>
+          And EVERYTHING is just for pure entertainment/fun for me, anyway I
+          love programming and I plan to study software engineering in the near
+          future, that is when I finish high school.
+        </p>
+        <p>
+          By the way, I probably have a lot more commits on weekends, for
+          obvious reasons, fucking high school. It's too time consuming, I have
+          to be literally all day long in that place, it's horrible, but that's
+          what it is.
+        </p>
+        <p>
+          Also the high school is getting MUCH worse with this heat wave that is
+          hitting Paraguay, it seems that this year we will not have winter
+          (again), so we will have temperatures +30ºC in times where we should
+          have temperatures of 4-5ºC.
+        </p>
+        <p>
+          I am a cat lover, I also like anime and videogames, here below is a
+          list of the best videogames ever (according to me)
+        </p>
+      </div>
       <div class="dual-div">
         <div class="dual-div-item" style="font-size: 160%">
           <ol>
