Improve footer and header of index.html

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           height="50"
         />
       </a>
-      <div class="to-right">
-        <a style="margin-right: 10px" href="./about-me.html"><b>About me</b></a>
-        <a href="https://github.com/Tom5521">
-          <b>My Github</b>
-        </a>
+      <a href="https://github.com/Tom5521">
+        <img src="./images/github-mark.png" width="50" height="50" />
+      </a>
+      <div class="to-right" style="margin-right: 10px">
+        <a href="./about-me.html"><b>About me</b></a>
       </div>
     </header>
 
@@ -153,7 +153,14 @@
       </div>
     </div>
     <footer>
-      <b>Made by Tom5521 :D</b>
+      <b>Made by <a href="https://github.com/Tom5521">Tom5521</a> :D</b>
+
+      <a
+        class="to-right"
+        style="margin-bottom: 1%"
+        href="https://github.com/Tom5521/Tom5521.github.io"
+        ><b>Source Code</b></a
+      >
     </footer>
   </body>
 </html>
