--- a/about-me.html
+++ b/about-me.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>About Me</title>
     <link rel="stylesheet" href="css/about-me.css" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
