--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 
         <h4>Examples</h4>
 
+        <h3 style="text-align: center">I ❤️ Fyne Framework</h3>
+
         <div class="dual-div">
           <h3 class="dual-div-item">
             <a href="https://github.com/Tom5521/GZGoLauncher">GZGoLauncher</a>
