--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             />
           </h3>
         </div>
+        <h3 style="text-align: center">I ❤️ GTK4</h3>
         <div class="dual-div">
           <h3 class="dual-div-item">
             <a href="https://github.com/Tom5521/gtk4tools">gtk4tools</a>
