Add gotk4-examples and gtk4tools images

--- a/index.html
+++ b/index.html
@@ -114,31 +114,47 @@
 
         <div class="dual-div">
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/GZGoLauncher">GZGoLauncher</a>
-            <br />
-            <img
-              src="https://github.com/Tom5521/GZGoLauncher/blob/main/screenshots/Screenshot1.png?raw=true"
-              style="width: 100%; height: 100%"
-            />
+            <a href="https://github.com/Tom5521/GZGoLauncher"
+              >GZGoLauncher
+              <br />
+              <img
+                src="https://github.com/Tom5521/GZGoLauncher/blob/main/screenshots/Screenshot1.png?raw=true"
+                class="good-img"
+              />
+            </a>
           </h3>
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/EduTrack">EduTrack</a>
-            <br />
-            <img
-              src="https://github.com/Tom5521/EduTrack/blob/main/screenshots/Screenshot.png?raw=true"
-              style="width: 100%; height: 100%"
-            />
+            <a href="https://github.com/Tom5521/EduTrack"
+              >EduTrack
+              <br />
+              <img
+                src="https://github.com/Tom5521/EduTrack/blob/main/screenshots/Screenshot.png?raw=true"
+                class="good-img"
+              />
+            </a>
           </h3>
         </div>
         <h3 style="text-align: center">I ❤️ GTK4</h3>
         <div class="dual-div">
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/gtk4tools">gtk4tools</a>
+            <a href="https://github.com/Tom5521/gtk4tools"
+              >gtk4tools
+              <img
+                src="./images/gtk4tools.png"
+                class="good-img"
+                style="height: 70%"
+              />
+            </a>
           </h3>
           <h3 class="dual-div-item">
             <a href="https://github.com/Tom5521/gotk4-examples"
-              >gotk4 examples</a
-            >
+              >gotk4 examples
+              <img
+                src="./images/gotk4-examples.png"
+                class="good-img"
+                style="height: 70%"
+              />
+            </a>
           </h3>
         </div>
       </div>
