Add target _blank to some links

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   </head>
   <body>
     <header>
-      <a href="https://twitter.com/_ThomasIsBored">
+      <a href="https://twitter.com/_ThomasIsBored" target="_blank">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg"
           width="50"
           height="50"
         />
       </a>
-      <a href="https://www.reddit.com/u/Sad-Technician3861"
+      <a href="https://www.reddit.com/u/Sad-Technician3861" target="_blank"
         ><img
           src="https://seeklogo.com/images/R/reddit-logo-23F13F6A6A-seeklogo.com.png"
           width="50"
           height="50"
         />
       </a>
-      <a href="https://github.com/Tom5521">
+      <a href="https://github.com/Tom5521" target="_blank">
         <img src="./images/github-mark.png" width="50" height="50" />
       </a>
       <div class="to-right" style="margin-right: 10px">
@@ -114,7 +114,7 @@
 
         <div class="dual-div">
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/GZGoLauncher"
+            <a href="https://github.com/Tom5521/GZGoLauncher" target="_blank"
               >GZGoLauncher
               <br />
               <img
@@ -124,7 +124,7 @@
             </a>
           </h3>
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/EduTrack"
+            <a href="https://github.com/Tom5521/EduTrack" target="_blank"
               >EduTrack
               <br />
               <img
@@ -137,7 +137,7 @@
         <h3 style="text-align: center">I ❤️ GTK4</h3>
         <div class="dual-div">
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/gtk4tools"
+            <a href="https://github.com/Tom5521/gtk4tools" target="_blank"
               >gtk4tools
               <img
                 src="./images/gtk4tools.png"
@@ -147,7 +147,7 @@
             </a>
           </h3>
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/gotk4-examples"
+            <a href="https://github.com/Tom5521/gotk4-examples" target="_blank"
               >gotk4 examples
               <img
                 src="./images/gotk4-examples.png"
