--- a/about-me.html
+++ b/about-me.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   </head>
   <body style="background-image: url(./images/golang-bg.png)">
     <header>
-      <a href="index.html"><b>Home</b></a>
+      <a href="index.html">Home</a>
     </header>
     <div style="background-color: rgba(0, 0, 0, 0.377)">
       <h1 style="text-align: center">About Me</h1>
@@ -48,22 +48,22 @@
       </div>
       <div class="dual-div">
         <div class="dual-div-item" style="font-size: 160%">
-          <ol>
-            <li><b>ULTRAKILL</b></li>
-            <li><b>Half Life 2</b></li>
-            <li><b>Terraria</b></li>
-            <li><b>Portal 2</b></li>
-            <li><b>Fallout New Vegas</b></li>
-            <li><b>Left 4 Dead 2</b></li>
-            <li><b>Carrion</b></li>
-            <li><b>Stardew Valley</b></li>
-            <li><b>GTA V</b></li>
-            <li><b>Portal</b></li>
-            <li><b>Papers Please</b></li>
-            <li><b>Blasphemous</b></li>
-            <li><b>Kerbal Space Program</b></li>
-            <li><b>GTA SA</b></li>
-            <li><b>Minecraft</b></li>
+          <ol class="bold">
+            <li>ULTRAKILL</li>
+            <li>Half Life 2</li>
+            <li>Terraria</li>
+            <li>Portal 2</li>
+            <li>Fallout New Vegas</li>
+            <li>Left 4 Dead 2</li>
+            <li>Carrion</li>
+            <li>Stardew Valley</li>
+            <li>GTA V</li>
+            <li>Portal</li>
+            <li>Papers Please</li>
+            <li>Blasphemous</li>
+            <li>Kerbal Space Program</li>
+            <li>GTA SA</li>
+            <li>Minecraft</li>
           </ol>
         </div>
         <div class="dual-div-item">
@@ -83,11 +83,11 @@
       </div>
       <div class="dual-div" style="text-align: center">
         <div class="dual-div-item" style="font-size: 160%">
-          <ol>
-            <li><b>The end of Evangelion</b></li>
-            <li><b>Neon Genesis Evangelion</b></li>
-            <li><b>Akira</b></li>
-            <li><b>Death Note</b></li>
+          <ol class="bold">
+            <li>The end of Evangelion</li>
+            <li>Neon Genesis Evangelion</li>
+            <li>Akira</li>
+            <li>Death Note</li>
           </ol>
         </div>
         <div class="dual-div-item">
@@ -107,15 +107,15 @@
       </div>
       <div class="dual-div" style="text-align: center">
         <div class="dual-div-item" style="font-size: 160%">
-          <ol>
-            <li><b>Berserk</b></li>
-            <li><b>Chainsaw Man</b></li>
-            <li><b>Oyasumi Pun Pun</b></li>
-            <li><b>Akira</b></li>
-            <li><b>Vagabond</b></li>
-            <li><b>20th Century Boys</b></li>
-            <li><b>Umibe no Onanoko</b></li>
-            <li><b>Naruto</b></li>
+          <ol class="bold">
+            <li>Berserk</li>
+            <li>Chainsaw Man</li>
+            <li>Oyasumi Pun Pun</li>
+            <li>Akira</li>
+            <li>Vagabond</li>
+            <li>20th Century Boys</li>
+            <li>Umibe no Onanoko</li>
+            <li>Naruto</li>
           </ol>
         </div>
         <div class="dual-div-item">
