Add blank target to zazu img

--- a/about-me.html
+++ b/about-me.html
@@ -69,7 +69,7 @@
         <div class="dual-div-item">
           <h6 style="font-size: 20%">(reload the page to change image)</h6>
           <h4>I love you zazu!!!</h4>
-          <a href="https://www.instagram.com/zazubabyman/">
+          <a href="https://www.instagram.com/zazubabyman/" target="_blank">
             <img id="zazu-img" style="width: 80%" />
             <script src="./js/random-zazu-img.js"></script>
           </a>
