Add more titles to about-me.html

--- a/about-me.html
+++ b/about-me.html
@@ -49,20 +49,22 @@
       <div class="dual-div">
         <div class="dual-div-item" style="font-size: 160%">
           <ol class="bold">
-            <li>ULTRAKILL</li>
-            <li>Half Life 2</li>
-            <li>Terraria</li>
-            <li>Portal 2</li>
-            <li>Fallout New Vegas</li>
+            <li title="When is the ULTRASEX update cuming?">ULTRAKILL</li>
+            <li title="Gabe Newell can't count to three">Half Life 2</li>
+            <li title="WEEEOOOO WEEEEOOO BUP BIP BIRUP BUP">Terraria</li>
+            <li title="I miss you Wheatley :(">Portal 2</li>
+            <li title="I support the RNC">Fallout New Vegas</li>
             <li>Left 4 Dead 2</li>
             <li>Carrion</li>
             <li>Stardew Valley</li>
             <li>GTA V</li>
-            <li>Portal</li>
-            <li>Papers Please</li>
+            <li title="The cake is a lie">Portal</li>
+            <li title="Glory to Arstotzka">Papers Please</li>
             <li>Blasphemous</li>
             <li>Kerbal Space Program</li>
-            <li>GTA SA</li>
+            <li title="All We Had to Do Was Follow the Damn Train CJ!!!">
+              GTA SA
+            </li>
             <li>Minecraft</li>
           </ol>
         </div>
@@ -70,7 +72,12 @@
           <h6 style="font-size: 20%">(reload the page to change image)</h6>
           <h4>I love you zazu!!!</h4>
           <a href="https://www.instagram.com/zazubabyman/" target="_blank">
-            <img id="zazu-img" style="width: 80%" />
+            <img
+              id="zazu-img"
+              style="width: 80%"
+              title=":3"
+              alt="Zazu the cat :3"
+            />
             <script src="./js/random-zazu-img.js"></script>
           </a>
         </div>
@@ -85,7 +92,7 @@
         <div class="dual-div-item" style="font-size: 160%">
           <ol class="bold">
             <li>The end of Evangelion</li>
-            <li>Neon Genesis Evangelion</li>
+            <li title="Get in the EVA Shinji">Neon Genesis Evangelion</li>
             <li>Akira</li>
             <li>Death Note</li>
           </ol>
@@ -109,13 +116,13 @@
         <div class="dual-div-item" style="font-size: 160%">
           <ol class="bold">
             <li>Berserk</li>
-            <li>Chainsaw Man</li>
-            <li>Oyasumi Pun Pun</li>
+            <li title="Asagod">Chainsaw Man</li>
+            <li title=":(">Oyasumi Pun Pun</li>
             <li>Akira</li>
             <li>Vagabond</li>
             <li>20th Century Boys</li>
             <li>Umibe no Onanoko</li>
-            <li>Naruto</li>
+            <li title="The best yaoi I've ever read">Naruto</li>
           </ol>
         </div>
         <div class="dual-div-item">
