--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img src="./images/top-bg.png" class="bg" />
       <div class="content" style="text-align: center">
         <div style="font-size: 180%">
-          <h1>Hi I'm Tom</h1>
+          <h1 title="Hi">Hi I'm Tom</h1>
         </div>
 
         <br />
