--- a/about-me.html
+++ b/about-me.html
@@ -5,10 +5,11 @@
     <title>About Me</title>
     <link rel="stylesheet" href="css/about-me.css" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/fonts.css" />
   </head>
   <body style="background-image: url(./images/golang-bg.png)">
     <header>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="link">Home</a>
     </header>
     <div style="background-color: rgba(0, 0, 0, 0.377)">
       <h1 style="text-align: center">About Me</h1>
