--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -6,6 +6,7 @@
     <title>Tom's place</title>
     <link href="./css/index.css" rel="stylesheet" />
     <link href="./css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/fonts.css" />
   </head>
   <body>
     <header>
@@ -27,7 +28,7 @@
         <img src="./images/github-mark.png" width="50" height="50" />
       </a>
       <div class="to-right" style="margin-right: 10px">
-        <a href="./about-me.html"><b>About me</b></a>
+        <a href="./about-me.html" class="link"><b>About me</b></a>
       </div>
     </header>
 
@@ -40,7 +41,9 @@
 
         <br />
         <h2>I'm a junior programmer who programs for fun and boredom.</h2>
-        <a style="font-size: 115%" href="./about-me.html">About me</a>
+        <a style="font-size: 115%" class="link" href="./about-me.html"
+          >About me</a
+        >
         <br /><br />
         <q
           >School schedules are the worst thing that could have been invented</q
@@ -172,10 +175,13 @@
       </div>
     </div>
     <footer>
-      <b>Made by <a href="https://github.com/Tom5521">Tom5521</a> :D</b>
+      <b
+        >Made by
+        <a class="link" href="https://github.com/Tom5521">Tom5521</a> :D</b
+      >
 
       <a
-        class="to-right"
+        class="to-right link"
         style="margin-bottom: 1%"
         href="https://github.com/Tom5521/Tom5521.github.io"
         ><b>Source Code</b></a
