Fix index.html footer :D

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="https://github.com/Tom5521" target="_blank">
         <img src="./images/github-mark.png" width="50" height="50" />
       </a>
-      <div class="to-right" style="margin-right: 10px">
+      <div class="to-right" style="margin-right: 10px; margin-top: 1%">
         <a href="./about-me.html" class="link"><b>About me</b></a>
       </div>
     </header>
@@ -182,7 +182,6 @@
 
       <a
         class="to-right link"
-        style="margin-bottom: 1%"
         href="https://github.com/Tom5521/Tom5521.github.io"
         ><b>Source Code</b></a
       >
