Add youtube links in index.html

--- a/index.html
+++ b/index.html
@@ -174,6 +174,58 @@
         </p>
       </div>
     </div>
+    <div class="wrap">
+      <img src="./images/Glfwcompatible.png" class="bg" />
+      <div class="content center-text">
+        <h2>Playlist I use for programming</h2>
+        <div class="dual-div">
+          <div class="dual-div-item">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/videoseries?si=Qiln6ZYSdXr88LHM&amp;list=PLpShJAhHjyQw2GzSPxU_M5DDFQg_Ha3kB"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="dual-div-item">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/videoseries?si=eURzJiQQn_o9jKf7&amp;list=PLCyILYCaAAnGux6VA6MTtLzpOPHrbOk80"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+
+        <h2>Blocked by youtube api</h2>
+        <ul class="link">
+          <li>
+            <a
+              href="https://youtube.com/playlist?list=PLCyILYCaAAnHv2k18Vc0IXMZ7_4bgf5Kz&si=qHDJUcSOkaLGbe8k"
+              class="link"
+              target="_blank"
+              >Linkin Park Favorites</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://youtube.com/playlist?list=PLpShJAhHjyQws83odym7Q9mZ82wxvnRfw&si=96YJIk3RY4ZZwjuq"
+              class="link"
+              target="_blank"
+              >Maximun The Hormone Favorites</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
     <footer>
       <b
         >Made by
