Add #2 into the blog

--- a/blog-homepage.html
+++ b/blog-homepage.html
@@ -7,7 +7,12 @@
     <h1>Pagina principal</h1>
     <h2>Posts</h2>
     <ul>
-      <li><a href="blog/1.html">1</a></li>
+      <li>
+        <a href="blog/1.html">#1: Introduccion y contextualizacion al blog.</a>
+      </li>
+      <li>
+        <a href="blog/2.html">#2: Odio el desfile.</a>
+      </li>
     </ul>
   </body>
 </html>
