Remove blog because I'm lazy as fuck

--- a/about-me.html
+++ b/about-me.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,11 +10,6 @@
   <body style="background-image: url(./images/golang-bg.png)">
     <header>
       <a href="index.html" class="link">Home</a>
-      <div class="to-right">
-        <a href="./blog-homepage.html" class="link"
-          ><b>My blog (is in spanish)</b></a
-        >
-      </div>
     </header>
     <div style="background-color: rgba(0, 0, 0, 0.377)">
       <h1 style="text-align: center">About Me</h1>
