Add more fonts and add Setup in index

--- a/index.html
+++ b/index.html
@@ -175,6 +175,42 @@
       </div>
     </div>
     <div class="wrap">
+      <img src="./images/battlestation-background.jpg" class="bg" />
+      <div class="content center-text" style="font-size: 190%">
+        <h2>My Setup</h2>
+        <ul>
+          <li>
+            <div class="bold">Monitor:</div>
+            Samsung SyncMaster E1920
+          </li>
+          <li>
+            <div class="bold">Keyboard:</div>
+            Logitech K235
+          </li>
+          <li>
+            <div class="bold">Mouse:</div>
+            Logitech M190
+          </li>
+          <li>
+            <div class="bold">CPU:</div>
+            Intel Core i5-3330 (4) @ 3,20 GHz
+          </li>
+          <li>
+            <div class="bold">GPU:</div>
+            NVIDIA GeForce GT 630
+          </li>
+          <li>
+            <div class="bold">RAM:</div>
+            8GB
+          </li>
+          <li>
+            <div class="bold">OS:</div>
+            Arch Linux - Kernel Xanmod
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="wrap">
       <img src="./images/Glfwcompatible.png" class="bg" />
       <div class="content center-text">
         <h2>Playlist I use for programming</h2>
@@ -226,6 +262,7 @@
         </ul>
       </div>
     </div>
+
     <footer>
       <b
         >Made by
