--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           </li>
           <li>
             <a
-              href="https://youtube.com/playlist?list=PLpShJAhHjyQws83odym7Q9mZ82wxvnRfw&si=96YJIk3RY4ZZwjuq"
+              href="https://youtube.com/playlist?list=PLpShJAhHjyQwk7V-7IQl-B6Et3SGcnasi&si=If1XFDAIXNgjaSGh"
               class="link"
               target="_blank"
               >Maximun The Hormone Favorites</a
