--- a/about-me.html
+++ b/about-me.html
@@ -73,7 +73,19 @@
               title=":3"
               alt="Zazu the cat :3"
             />
-            <script src="./js/random-zazu-img.js"></script>
+            <!--SCRIPT -->
+            <script src="./js/wasm_exec.js"></script>
+            <script>
+              const go = new Go();
+              WebAssembly.instantiateStreaming(
+                fetch("./wasm/random-zazu-img.wasm"),
+                go.importObject,
+              ).then((result) => {
+                go.run(result.instance);
+              });
+            </script>
+
+            <!-- <script src="./js/random-zazu-img.js"></script> -->
           </a>
         </div>
       </div>
