Add blog (again!)

--- a/about-me.html
+++ b/about-me.html
@@ -10,6 +10,9 @@
   <body style="background-image: url(./images/golang-bg.png)">
     <header>
       <a href="index.html" class="link">Home</a>
+      <a class="to-right" href="./js/index.html" target="_blank"
+        >My blog(is in spanish)</a
+      >
     </header>
     <div style="background-color: rgba(0, 0, 0, 0.377)">
       <h1 style="text-align: center">About Me</h1>
