Add action and remove js folder

--- a/about-me.html
+++ b/about-me.html
@@ -77,7 +77,7 @@
               alt="Zazu the cat :3"
             />
             <!--SCRIPT -->
-            <script src="./js/wasm_exec.js"></script>
+            <script src="./wasm_exec.js"></script>
             <script>
               const go = new Go();
               WebAssembly.instantiateStreaming(
