--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@
         <h3 style="text-align: center">I ❤️ GTK4</h3>
         <div class="dual-div">
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/gtk4tools" target="_blank"
-              >gtk4tools
-              <img
-                src="./images/gtk4tools.png"
-                class="good-img"
-                style="height: 70%"
-              />
+            <a href="https://github.com/Tom5521/gonotes" target="_blank"
+              >gonotes
+              <script
+                src="https://asciinema.org/a/665593.js"
+                id="asciicast-665593"
+                async="true"
+              ></script>
             </a>
           </h3>
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/gotk4-examples" target="_blank"
-              >gotk4 examples
-              <img
-                src="./images/gotk4-examples.png"
-                class="good-img"
-                style="height: 70%"
-              />
+            <a href="https://github.com/Tom5521/fsize" target="_blank"
+              >fsize
+              <script
+                src="https://asciinema.org/a/665591.js"
+                id="asciicast-665591"
+                async="true"
+              ></script>
             </a>
           </h3>
         </div>
