--- a/about-me.html
+++ b/about-me.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/about-me.css" />
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/fonts.css" />
+    <script src="./wasm_exec.js"></script>
+    <script src="./js/embed-zazu-img.js"></script>
   </head>
   <body style="background-image: url(./images/golang-bg.png)">
     <header>
@@ -73,19 +75,6 @@
               title=":3"
               alt="Zazu the cat :3"
             />
-            <!--SCRIPT -->
-            <script src="./wasm_exec.js"></script>
-            <script>
-              const go = new Go();
-              WebAssembly.instantiateStreaming(
-                fetch("./wasm/random-zazu-img.wasm"),
-                go.importObject,
-              ).then((result) => {
-                go.run(result.instance);
-              });
-            </script>
-
-            <!-- <script src="./js/random-zazu-img.js"></script> -->
           </a>
         </div>
       </div>
