Update I love message

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <h4>Examples</h4>
 
-        <h3 style="text-align: center">I ❤️ Fyne Framework</h3>
+        <h3 style="text-align: center">I ❤️ Fyne Framework & GTK4</h3>
 
         <div class="dual-div">
           <h3 class="dual-div-item">
@@ -137,7 +137,6 @@
             </a>
           </h3>
         </div>
-        <h3 style="text-align: center">I ❤️ GTK4</h3>
         <div class="dual-div">
           <h3 class="dual-div-item">
             <a href="https://github.com/Tom5521/gonotes" target="_blank"
