Update top-games list

--- a/about-me.html
+++ b/about-me.html
@@ -46,8 +46,9 @@
       <div class="dual-div">
         <div class="dual-div-item" style="font-size: 160%">
           <ol class="bold">
-            <li title="When is the ULTRASEX update cuming?">ULTRAKILL</li>
-            <li title="Gabe Newell can't count to three">Half Life 2</li>
+            <li title="When is the ULTRASEX update cumming?">ULTRAKILL</li>
+            <li title="Gabe Newell can't count to three :(">Half Life 2</li>
+            <li title="Memes. The DNA of the soul">Metal Gear Rising</li>
             <li title="WEEEOOOO WEEEEOOO BUP BIP BIRUP BUP">Terraria</li>
             <li title="I miss you Wheatley :(">Portal 2</li>
             <li title="I support the RNC">Fallout New Vegas</li>
