Update kernel name

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </li>
           <li>
             <div class="bold">OS:</div>
-            Arch Linux - Kernel Xanmod
+            Arch Linux - Clear Linux Kernel
           </li>
         </ul>
       </div>
