--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<
 <!-- This code is garbage - A linux tordvals fan -->
 <html lang="en">
   <head>
@@ -264,7 +264,7 @@
 
     <footer>
       <b
-        >Made by
+        >Made with ❤️ by
         <a class="link" href="https://github.com/Tom5521">Tom5521</a> :D</b
       >
 
