--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- This code is garbage - A linux tordvals fan -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -126,13 +125,10 @@
             </a>
           </h3>
           <h3 class="dual-div-item">
-            <a href="https://github.com/Tom5521/EduTrack" target="_blank"
-              >EduTrack
+            <a href="https://github.com/Tom5521/xgotext" target="_blank">
+              xgotext
               <br />
-              <img
-                src="https://github.com/Tom5521/EduTrack/blob/main/screenshots/Screenshot.png?raw=true"
-                class="good-img"
-              />
+              <img src="./images/xgotext.png" alt="xgotext" />
             </a>
           </h3>
         </div>
