--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <a href="https://www.reddit.com/u/Sad-Technician3861" target="_blank"
         ><img
-          src="https://seeklogo.com/images/R/reddit-logo-23F13F6A6A-seeklogo.com.png"
+          src="https://links.communitycenter.eu/images/4/43/Reddit.svg"
           width="50"
           height="50"
         />
